--- a/semares.yml
+++ b/semares.yml
@@ -2,7 +2,7 @@ pipelines:
 - pipelineName: mosbi analysis repository
   pipelineDescription: "Biclustering algorithms on omics data in combination with a novel ensemble approach to find molecular signatures in the data. This can yield to new insights of the data, which go further than traditional clustering, where only one dimension is considered."
   pipelineCommand: nextflow run
-  pipelineVersion: "1.0.0"
+  pipelineVersion: "1.1.0"
 
   pipelineParams:
   - paramName: Output Folder Path
@@ -31,7 +31,7 @@ pipelines:
     paramKey: --protein_mapping
     paramType: InputPath
     isMultiValue: false
-    isRequired: true
+    isRequired: false
 
   - paramName: MinSize
     paramDescription: minimum size
