--- a/config/data_table_config.json
+++ b/config/data_table_config.json
@@ -1,7 +1,7 @@
 {
     "output": {
         "file_name": "data.tsv",
-        "sep": "\t",
+        "sep": ",",
         "quotechar": "",
         "path": "./output/"
     },
